# Human_Keypoints_Detection

./: .gitignore  README.md  pyproject.toml
docs/flow_scheme/: create_arch_diagram.py  inference_flow.py  trainning_flow.py
docs/tex/: main.tex  refs.bib
docs/typst/: main.bib  main.typ
scripts/: download_model.py  prepare_train_labels.py
src/: generate_flow_docs.py
src/human_keypoints_detection/: __init__.py  run.py  train.py  val.py
src/human_keypoints_detection/datasets/: __init__.py  coco.py
src/human_keypoints_detection/models/: __init__.py  with_mobilenet.py
src/human_keypoints_detection/modules/: __init__.py  conv.py  keypoints.py  load_state.py  pose.py
