[project]
name = "human-keypoints-detection"
version = "0.1.0"
description = "人体姿态与关键点检测项目"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
